fix spacing for tech stack items

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     font-family: 'space mono', 'open sans', 'arial';
     margin: 0;
+    padding: 0;
     --red: #D22020;
     --pink: #FFDBE1;
     scroll-behavior: smooth;
@@ -16,6 +17,8 @@ body{
     background-image: 
         linear-gradient(to right, white 1px, transparent 1px),
         linear-gradient(to bottom, white 1px, transparent 1px); 
+    margin: 0;
+    padding: 0;
 }
 
 #navbar{
@@ -87,8 +90,6 @@ body{
     display: none;
 }
 
-
-
 ul li{
     list-style: none;
 }
@@ -141,25 +142,24 @@ a{
     flex-wrap: wrap;
     gap: 10px;
     height: auto;
+    margin: 0 auto;
 }
 
 .tech-item{
-    display: flex;
-    flex-direction: column;
     background-color: white;
-    padding: 1.5rem;
     width: 3rem;
-    height: 3rem;
-    font-size: 16px;
+    height: auto;
+    padding: 1.5rem;
+}
+
+.tech-item>img{
 
 }
 
-#tech-stack img{
-    width: 2.5rem;
-}
-
-.tech-item p{
+.tech-item>p{
     text-align: center;
+    width: auto;
+    margin: 0 -1.5rem;
 }
 
 .selected{
@@ -210,7 +210,7 @@ a{
 
 /* contact section */
 #contact{
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 }
 
 #contact-container>a>img{
